--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ defaultContentLanguage = "en-us"
 title = "Biyka R Blog"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "hugo-tranquilpeak-theme"
-# googleAnalytics = "UA-123-45"
+googleAnalytics = "UA-36638171-4"
 paginate = 7
 canonifyurls = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
@@ -33,8 +33,8 @@ publishDir = "/Users/bendowne/Documents/GitHub/biyka.github.io"
 
 [author]
   name = "Ben Downe"
-  bio = "Super bio with markdown support **COOL**"
-  job = "Head of Business Intelligence at BCA"
+  #bio = "Super bio with markdown support **COOL**"
+  job = "Head of Business Intelligence"
   location = "London, UK"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   gravatarEmail = "ben@biyka.com"
@@ -42,7 +42,7 @@ publishDir = "/Users/bendowne/Documents/GitHub/biyka.github.io"
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   picture = "https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png"
   # Your Twitter username without the @. E.g : thibaudlepretre
-  # twitter = "thibaudlepretre"
+  twitter = "bendowne"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
   # googlePlus = "+ThibaudLepretre"
 
